--- a/examples/html-umd/index.html
+++ b/examples/html-umd/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="root"></div>
 <script src="http://localhost:8080/dist/umd/bundle.js"></script>
+<link rel="stylesheet" href="http://localhost:8080/dist/umd/bundle.css">
 <script type="text/javascript">
     const e = React.createElement;
     const domContainer = document.querySelector('#root');
